--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,12 @@
+# port
+# server.port=8080
 
+# dbms
+spring.datasource.url=jdbc:oracle:thin:@dblab_high?TNS_ADMIN=C:/Oracle/Wallet_DBLab
+spring.datasource.username=ss230106
+spring.datasource.password=Spring_61258
+spring.datasource.driver-class-name=oracle.jdbc.driver.OracleDriver
+
+# jpa
+spring.jpa.show=sql=true
+spring.jpa.hibernate.ddl-auto=create
