Add : 전자지갑 경로 설명 추가

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,6 +2,7 @@
 # server.port=8080
 
 # dbms
+# url? ? ?? ??? ???? ??? ?????
 spring.datasource.url=jdbc:oracle:thin:@dblab_high?TNS_ADMIN=E:/Oracle/Wallet_DBLab
 spring.datasource.username=ss230106
 spring.datasource.password=Spring_61258
