--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,12 +1,12 @@
 # port
 server:
-  port: 8088
+  port: 3000
 
 
 spring:
   datasource:         # Oracle dataSource
     driver-class-name: oracle.jdbc.driver.OracleDriver
-    url: jdbc:oracle:thin:@dblab_high?TNS_ADMIN=C:/Oracle/Wallet_DBLab   # use Oracle Wallet
+    url: jdbc:oracle:thin:@dblab_high?TNS_ADMIN=E:/Oracle/Wallet_DBLab   # use Oracle Wallet
     username: ss230106
     password: Spring_61258
 
@@ -23,9 +23,3 @@ spring:
     org.hibernate.SQL: debug
 
 # kakao
-  kakao:
-    authUrl: https://kauth.kakao.com/oauth/token
-    userApiUrl: https://kapi.kakao.com/v2/user/me
-    restapiKey: 07aa811862cf244772a3a4e798f03b54
-    redirectUrl: http://localhost:3000/callback
-
