--- a/build.gradle
+++ b/build.gradle
@@ -61,7 +61,8 @@ dependencies {
 	implementation 'org.apache.httpcomponents:httpclient:4.5.13'
 	implementation 'com.google.code.gson:gson:2.8.7'
 
-	implementation 'javax.servlet:servlet-api:2.5'
+	//implementation 'javax.servlet:servlet-api:2.5'
+	implementation 'javax.servlet:javax.servlet-api:4.0.1'
 }
 
 tasks.named('test') {
