--- a/build.gradle
+++ b/build.gradle
@@ -22,7 +22,7 @@ dependencies {
 	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
 	implementation 'org.springframework.boot:spring-boot-starter-security'
 	implementation group: 'org.springframework.security', name: 'spring-security-oauth2-client', version: '5.6.3'
-	implementation 'org.springframework.boot:spring-boot-starter-thymeleaf'
+//	implementation 'org.springframework.boot:spring-boot-starter-thymeleaf'
 	implementation 'org.springframework.boot:spring-boot-starter-web'
 	implementation 'org.springframework.boot:spring-boot-starter-web-services'
 
@@ -61,8 +61,13 @@ dependencies {
 	implementation 'org.apache.httpcomponents:httpclient:4.5.13'
 	implementation 'com.google.code.gson:gson:2.8.7'
 
+
+	// JSP
 	//implementation 'javax.servlet:servlet-api:2.5'
-	implementation 'javax.servlet:javax.servlet-api:4.0.1'
+	//implementation 'javax.servlet:javax.servlet-api:4.0.1'
+
+	implementation group: 'javax.servlet', name: 'jstl', version: '1.2'
+	implementation group: 'org.apache.tomcat.embed', name: 'tomcat-embed-jasper', version: '9.0.60'
 }
 
 tasks.named('test') {
