--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,7 +1,11 @@
 # port
 server:
-  port: 8080
-
+  port: 8088
+  tomcat:
+    additional-tld-skip-patterns:
+      - oraclepki.jar
+      - osdt_core.jar
+      - osdt_cert.jar
 spring:
   jpa:
     database: oracle
@@ -18,6 +22,8 @@ spring:
     view:
       prefix: /WEB-INF/jsp/
       suffix=: .jsp
+kakao:
+  redirectUrl: http://localhost:8088/oauth/token
 
 logging:
   level:
