Add: 내가 쓴 글 조회 미완

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -17,7 +17,9 @@ spring:
         show_sql: true
   config:
     import: application-local.yml # DB, Kakao
-
+  jackson:
+    serialization:
+      FAIL_ON_EMPTY_BEANS: false
   mvc:
     view:
       prefix: /WEB-INF/jsp/
