--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -15,6 +15,8 @@ spring:
     properties:
       hibernate:
         show_sql: true
+        format_sql: true
+        use_sql_comments: true
   config:
     import: application-local.yml # DB, Kakao
   jackson:
@@ -29,4 +31,9 @@ kakao:
 
 logging:
   level:
-    org.hibernate.SQL: debug
+    org:
+      hibernate:
+        SQL: debug
+        type:
+          descriptor:
+            sql: trace
