--- a/build.gradle
+++ b/build.gradle
@@ -12,6 +12,7 @@ configurations {
 	compileOnly {
 		extendsFrom annotationProcessor
 	}
+
 }
 
 repositories {
@@ -61,7 +62,8 @@ dependencies {
 	implementation 'org.apache.httpcomponents:httpclient:4.5.13'
 	implementation 'com.google.code.gson:gson:2.8.7'
 
-
+	implementation 'org.apache.tomcat.embed:tomcat-embed-jasper'
+	implementation 'javax.servlet:jstl:1.2'
 	// JSP
 	//implementation 'javax.servlet:servlet-api:2.5'
 	//implementation 'javax.servlet:javax.servlet-api:4.0.1'
