--- a/build.gradle
+++ b/build.gradle
@@ -30,11 +30,14 @@ dependencies {
 	compileOnly 'org.projectlombok:lombok'
 	developmentOnly 'org.springframework.boot:spring-boot-devtools'
 	runtimeOnly 'com.h2database:h2'
-	runtimeOnly 'com.oracle.database.jdbc:ojdbc8'
-	//add
-	implementation 'com.oracle.database.security:osdt_cert'
-	implementation 'com.oracle.database.security:oraclepki'
-	implementation 'com.oracle.database.security:osdt_core'
+//	runtimeOnly 'com.oracle.database.jdbc:ojdbc8'
+
+//	implementation 'com.oracle.database.security:osdt_cert'
+//	implementation 'com.oracle.database.security:oraclepki'
+//	implementation 'com.oracle.database.security:osdt_core'
+
+	//mysql
+	implementation 'mysql:mysql-connector-java'
 	annotationProcessor 'org.projectlombok:lombok'
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
 	testImplementation 'org.springframework.security:spring-security-test'
